# src/main/java/net/wbz/moba/controlcenter/api/device/WsClient.java
@@ -1,0 +1,8 @@
+package net.wbz.moba.controlcenter.api.device;
+
+/**
+ * @author Daniel Tuerk
+ */
+public record WsClient(String clientId) {
+
+}
